@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-05T01:17:40Z",
-  "count" : 11,
-  "count_minmax" : [ 11, 11 ],
-  "count_decinc" : [ -0, +11 ],
+  "timestamp" : "2023-11-06T01:15:20Z",
+  "count" : 15,
+  "count_minmax" : [ 11, 15 ],
+  "count_decinc" : [ -0, +15 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
