@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-05T01:17:40Z",
+  "timestamp" : "2023-11-06T01:15:20Z",
   "count_outdated" : 976,
   "uniques_outdated" : 280,
-  "count" : 1005,
+  "count" : 1009,
   "uniques" : 286,
   "views" : [
     {
@@ -43,9 +43,9 @@
     },
     {
       "timestamp": "2023-11-05T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "count_decinc": [ 0, 11 ],
+      "count": 15,
+      "count_minmax": [ 11, 15 ],
+      "count_decinc": [ 0, 15 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
