@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 33,
   "uniques": 5,
   "views": [
     {
@@ -24,7 +24,7 @@
     },
     {
       "timestamp": "2023-11-05T00:00:00Z",
-      "count": 11,
+      "count": 15,
       "uniques": 1
     }
   ]
