@@ -1,3 +1,12 @@
+2023-11-06T01:15:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6765060952 # 1321
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 280 976 / 286 1005
+* notice: next accum: outdated-unq outdated-all / unq all: 280 976 / 286 1009
+* notice: prev exec diff / last date diff / accum: unq all: +0 +4 -0 -0 / +1 +15 -0 -0 / 1 15
+* notice: removed / changed dates: [] / [2023-11-05]
+
 2023-11-05T01:17:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6758330286 # 1318
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
